<resources>
    <string name="app_name">Cinestar</string>
    <string name="nav_terror">Terror</string>
    <string name="nav_comedia">Comedia</string>
    <string name="nav_accion">Accion</string>
    <string name="nav_titile_perfil">Perfil</string>
    <string name="nav_datos">Mis Datos</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="open_nav">Abriste el menu</string>
    <string name="close_nav">Cerraste el menu</string>
    <string name="hint_usr">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="btn_reg">Registar</string>
    <string name="btn_in">Entrar</string>

    <string-array name="peliculas">
        <item>El Señor de los Anillos</item>
        <item>Vengadores 2: La eran de Ultron</item>
        <item>Batman v Superman</item>
        <item>La vida es bella</item>
    </string-array>

</resources>
