<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="com.example.estacionvl_tc_014.cinestar.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/cine"
            />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/small"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usr"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <TableRow
        android:padding="@dimen/small"
        >
        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/registrar"
            android:text="@string/btn_reg"
            />
        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/entrar"
            android:text="@string/btn_in"
            />

    </TableRow>

</TableLayout>
